# DRAEM

./: .gitignore
base/: data_loader.py  model_unet.py  test_DRAEM.py  train_DRAEM.py
compression/: compress.sh  model_unet_light.py  nni.ipynb  tensor_watch.ipynb  to_onnx.py  train_draem_compressed.py  train_draem_light.py  train_draem_normed.py
deploy/: channeled_norm.cpp  post_process.cpp  post_process.py  simple_infer.cpp  slice_manager.cpp  slice_manager.py  testcv2.cpp  to_onnx.py  to_onnx.sh  to_trt.py  to_trt.sh  zmicAD.h
deploy/zmicad/: CMakeLists.txt  channeled_norm.cpp  post_process.cpp  pre_process.cpp  read_raw.cpp  slice_manager.cpp  slice_manager.h
deploy/zmicad/python/: channeled_norm.py
test/: eval_od.py  eval_od_self_adaption.py  grid_test_thresh.py  model_pack.py  output_scoremap.py  test_data_loader.py
test/old_test/: eval_utils.py  output_draem.py
train_gray/: __init__.py  checkdataset.ipynb  gray_data_loader.py  test_draem_gray.py  test_gray_ms.sh  train_draem_gray.py
train_mixup/: mixup_data_loader.py  train_mixup.py
train_sup/: sup_data_loader.py  train_sup.py
